Create a 'new' page. Icon in nav bar goes to that page. I have the 'create' function coded, but it's not working. Trying to solve this problem currently.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,9 @@
 
 
 @import 'variables';
-@import 'home_back';
+@import 'nav';
+@import 'header';
+@import 'item_boxes';
 
 body {
   background-image: url("http://q10rd3irg4-flywheel.netdna-ssl.com/wp-content/uploads/2016/05/4-640x426.jpg");
