--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,12 +1,18 @@
 <div>
   <h2>
     <%= link_to("/categories/", class: "nav-links back") do %>
-      <%= image_tag("http://downloadicons.net/sites/default/files/returns--icon-30696.png") %>
+      <%= image_tag("http://findicons.com/files/icons/1681/siena/128/undo.png") %>
     <% end %>
   </h2>
   <h2>
     <%= link_to("/", class: "nav-links home") do %>
       <%= image_tag("http://www.bestpeer.com/img/home.png") %>
+    <% end %>
+  </h2>
+
+  <h2>
+    <%= link_to("/products/new", class: "nav-links new") do %>
+      <%= image_tag("https://lh4.googleusercontent.com/-Xa3l7VsfilI/VDz0yiG5SdI/AAAAAAAABQY/RITzfsvFqYQ/w800-h800/add-list-256.png") %>
     <% end %>
   </h2>
 </div>
