--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,7 +1,3 @@
 
 <%= render 'form', product: product,
-  form_title: "Create a New Product",
-  form_url: "/products",
-  form_action: :POST,
-  submit_text: "Create Post"
-  %>
+  form_title: "Create a New Product"  %>
